<resources>
    <string name="app_name">TeleChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_textview">TextView</string>
    <string name="ivan_babenkov">Ivan Babenkov</string>
    <string name="online_rus">в сети</string>
    <string name="text_account">Аккаунт</string>
    <string name="text_num_teleph">+7(911)-111-11-11</string>
    <string name="editText_number_phone">Нажмите чтобы изменить номер телефона</string>
    <string name="username">Имя пользователя</string>
    <string name="settings_text_about_me">О себе</string>
    <string name="settings_text_write_about_me">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="todo">TODO</string>
    <string name="register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_send_SMS">Мы отправили СМС с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
</resources>