<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register_image"
        android:src="@drawable/register_image"
        android:layout_marginTop="@dimen/margin_vertical_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_vertical"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />


    <TextView
        android:id="@+id/register_text_we_send"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_vertical"
        android:gravity="center"
        android:text="@string/register_text_we_send_SMS"
        app:layout_constraintTop_toBottomOf="@id/register_text_enter_code" />

    <EditText
        android:id="@+id/register_input_code"
        android:hint="@string/register_hint_default_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_we_send"
        style="@style/register_et_enter_code" />

</androidx.constraintlayout.widget.ConstraintLayout>