<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_header_width"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/setting_user_photo_width"
            android:layout_height="@dimen/setting_user_photo_height"
            android:src="@drawable/deafult_photo"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="@dimen/settings_user_photo_civ_border_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/settings_user_photo_layout_marginStart"/>

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="@dimen/settings_username_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_username_marginStart"
            android:layout_marginTop="@dimen/settings_username_margTop"
            android:text="@string/ivan_babenkov"
            android:textSize="@dimen/settings_username_textSize"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"/>
        <TextView
            android:id="@+id/text_online_user"
            android:layout_width="@dimen/settings_text_online_user"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_online_user_margStart"
            android:text="@string/online_rus"
            android:textSize="@dimen/text_online_user_textSize"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
<TextView
    android:id="@+id/settings_text_account"
    android:text="@string/text_account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:layout_marginStart="@dimen/horizontal_margin_large"
    android:layout_marginTop="@dimen/settings_text_vertical_large"
    app:layout_constraintTop_toBottomOf="@id/settings_header_block"
    android:textSize="@dimen/small_textSize"
    android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_phone_number"
            android:text="@string/text_num_teleph"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/editText_number_phone"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            style="@style/separator"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_username"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/ivan_babenkov"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_username"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            style="@style/separator"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_about_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_about_me"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_about_me"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_text_about_me"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_about_me"
            android:text="@string/settings_text_write_about_me"
            app:layout_constraintTop_toBottomOf="@+id/settings_about_me"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            style="@style/separator"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_about_me" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/setting_btn_change_photo_width"
        android:layout_height="@dimen/setting_btn_change_photo_height"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/horizontal_margin_large"
        app:civ_border_color="@color/gray"
        app:civ_border_width="@dimen/settings_user_photo_civ_border_width"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />


</androidx.constraintlayout.widget.ConstraintLayout>